[project]
name = "agent1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.14",
]

[project.scripts]
agent1 = "agent1:main"
agent2 = "agent1.global_config:run_global"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
